tester/src/test/aya/failure/syntax/issue293-emoji32.aya.txt
In file $FILE:13:14 ->

  11 |   | 馃惖
  12 | 
  13 | def u : 馃槉 => 馃悞
                     ^^
  
Error: The expected type `馃槉` does not match the actual type `馃槀`
Tycking interrupted due to errors.
What are you doing?
